<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    android:background="@color/cream"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                style="@style/header_text.app_name"
                android:text="@string/warung_name_text"/>
        </LinearLayout>

        <!-- Food Menu -->
        <LinearLayout
            android:id="@+id/ll_food_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_food_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/header_text"
                android:text="@string/food_menu_text" />

            <View
                android:id="@+id/line_food_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_food_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_nasi_goreng"/>
                <EditText
                    android:id="@+id/et_food_one"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_food_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_mie_goreng"/>
                <EditText
                    android:id="@+id/et_food_two"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_food_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_ayam_bakar"/>
                <EditText
                    android:id="@+id/et_food_three"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_food_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_ayam_goreng"/>
                <EditText
                    android:id="@+id/et_food_four"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Drink Menu -->
        <LinearLayout
            android:id="@+id/ll_drink_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_drink_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/header_text"
                android:text="@string/drink_menu_text" />

            <View
                android:id="@+id/line_drink_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_drink_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_teh"/>
                <EditText
                    android:id="@+id/et_drink_one"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_drink_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_air_mineral_250"/>
                <EditText
                    android:id="@+id/et_drink_two"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_drink_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_air_mineral_600"/>
                <EditText
                    android:id="@+id/et_drink_three"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_drink_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/yellow_cb"
                    android:text="@string/menu_air_jeruk"/>
                <EditText
                    android:id="@+id/et_drink_four"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"
            android:onClick="calculateNow"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    style="@style/body_text"
                    android:text="@string/food_total_text"/>
                <TextView
                    android:id="@+id/tv_food_total"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content"
                    style="@style/gray_et"
                    android:hint="@string/hint_empty"
                    tools:text="@string/hint_empty"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_8">

                <TextView
                    style="@style/body_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:text="@string/drink_total_text" />

                <TextView
                    android:id="@+id/tv_drink_total"
                    style="@style/gray_et"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_empty"
                    tools:text="@string/hint_empty" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/body_text.bold"
                    android:text="@string/total_text"/>
                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content"
                    style="@style/gray_et"
                    android:hint="@string/hint_empty"
                    tools:text="@string/hint_empty"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/body_text"
                    android:text="@string/pay_total"/>
                <EditText
                    android:id="@+id/et_total_pay"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content"
                    style="@style/maroon_et"
                    android:hint="@string/hint_empty"
                    tools:text="@string/hint_empty"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="payNow"
                android:text="@string/pay_text"/>
        </LinearLayout>
    </LinearLayout>



</ScrollView>